validator_derive_tests/tests/compile-fail/length/wrong_type.rs
use validator::Validate;

#[derive(Validate)]
struct Test {
    #[validate(length(min = 5))]
    s: usize,
}

fn main() {}
